[package]
name = "lamcal"
version = "0.4.0"  # remember to update html_root_url
authors = ["haraldmaida"]

description = "A lambda calculus parser and interpreter"

repository = "https://github.com/haraldmaida/lamcal"
documentation = "https://docs.rs/lamcal"
homepage = "https://github.com/haraldmaida/lamcal"
readme = "README.md"
keywords = ["functional", "combinator", "mathematics", "parser", "interpreter"]
categories = ["science"]
license = "Apache-2.0"

[dependencies]
failure = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.2"
proptest = "0.8"
version-sync = "0.5"

[package.metadata.docs.rs]
features = [
    "failure",
]

[workspace]
members = [
    "repl"
]

[[bench]]
name = "parser_benchmark"
harness = false
