[package]
name = "lamcal"
version = "0.4.0"  # remember to update html_root_url
authors = ["haraldmaida"]

description = "A lambda calculus parser and interpreter"

repository = "https://github.com/haraldmaida/lamcal"
documentation = "https://docs.rs/lamcal"
homepage = "https://github.com/haraldmaida/lamcal"
readme = "README.md"
keywords = ["functional", "combinator", "mathematics", "parser", "interpreter"]
categories = ["science"]
license = "Apache-2.0"

edition = "2018"

[dependencies]
failure = { version = "0.1", optional = true }
hashbrown = "0.6"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
proptest = "0.9"
version-sync = "0.8"

[package.metadata.docs.rs]
features = [
    "failure",
]

[workspace]
members = [
    "repl"
]

[lib]
bench = false

[[bench]]
name = "parser_benchmark"
harness = false
