[package]
name = "lamcal-repl"
version = "0.2.0"
authors = ["haraldmaida"]

description = "A lambda calculus command line repl"

repository = "https://github.com/haraldmaida/lamcal"
documentation = "https://docs.rs/lamcal-repl"
homepage = "https://github.com/haraldmaida/lamcal/blob/master/repl"
readme = "README.md"
keywords = ["lambda-calculus", "repl", "evalute", "interpret", "parse"]
categories = ["science"]
license = "Apache-2.0"

[lib]
name = "lamcal_repl"
path = "src/lib.rs"

[[bin]]
name = "lamcali"
path = "src/main.rs"
required-features = ["config"]

[features]
default = ["config"]
no-color = ["colored/no-color"]

[dependencies]
lamcal = { version = "0.2", path = "../" }
colored = "1.6"
config = { version = "0.9", default-features = false, features = ["toml"], optional = true }
dirs = "1.0"
failure = "0.1"
rustyline = "1.0"

[dev-dependencies]
version-sync = "0.5"
