[package]
name = "lamcal-repl"
version = "0.2.1"  # remember to update html_root_url
authors = ["haraldmaida"]

description = "A lambda calculus command line repl"

repository = "https://github.com/haraldmaida/lamcal"
documentation = "https://docs.rs/lamcal-repl"
homepage = "https://github.com/haraldmaida/lamcal/blob/master/repl"
readme = "README.md"
keywords = ["lambda-calculus", "repl", "evalute", "interpret", "parse"]
categories = ["science"]
license = "Apache-2.0"

[lib]
name = "lamcal_repl"
path = "src/lib.rs"

[[bin]]
name = "lamcali"
path = "src/main.rs"
required-features = ["config", "rustyline"]

[features]
default = ["config", "rustyline"]
no-color = ["colored/no-color"]

[dependencies]
lamcal = { version = "0.2", path = "../" }
colored = "1.6"
config = { version = "0.9", default-features = false, features = ["toml"], optional = true }
dirs = "1.0"
failure = "0.1"
rustyline = { version = "2.0", optional = true }

[dev-dependencies]
version-sync = "0.5"

[package.metadata.docs.rs]
features = [
    "config",
    "rustyline",
]
